versioned_docs/version-3.0/airbridge.md
---
title: "Airbridge"
description: "Connect Adapty with Airbridge to track marketing and attribution insights."
metadataTitle: "Airbridge Integration | Adapty Docs"
---

import Zoom from 'react-medium-image-zoom';
import 'react-medium-image-zoom/dist/styles.css';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem'; 

[Airbridge](https://www.airbridge.io/) offers an integrated marketing performance analysis for websites and mobile apps by consolidating data collected from multiple devices, platforms, and channels. Using Airbridge's Identity Resolution Engine, you can combine scattered customer identity data from web and app interactions into a unified people-based identity, resulting in more accurate attribution.

Adapty provides a complete set of data that lets you track [subscription events](events) from stores in one place. With Adapty, you can easily see how your subscribers are behaving, learn what they like, and use that information to communicate with them in a way that's targeted and effective. 

The integration between Adapty and Airbridge operates in two main ways.

1. **Receiving attribution data from Airbridge**  
   Once you've set up the Airbridge integration, Adapty will start receiving attribution data from Airbridge. You can easily access and view this data on the user's page.
2. **Sending subscription events to Airbridge**  
   Adapty can send all subscription events which are configured in your integration to Airbridge. As a result, you'll be able to track these events within the Airbridge dashboard. This integration is beneficial for evaluating the effectiveness of your advertising campaigns.

## Web configuration

### Connect Adapty to Airbridge

To integrate Airbridge go to [Integrations > Airbridge](https://app.adapty.io/integrations/airbridge), turn on a toggle from off to on, and fill out fields.

First of all set credentials to build a connection between your Airbridge and Adapty profiles. Airbridge app name and Airbridge API token are required. 


<Zoom>
  <img src={require('./img/2b31d90-Untitled-1_1.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>





They both can be found in your Airbridge dashboard in the [Third-party Integrations > Adapty](https://app.airbridge.io/app/testad/integrations/third-party/adapty) section. 


<Zoom>
  <img src={require('./img/5a2f627-Screenshot_2023-02-21_at_11.19.29_AM.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>





Adapty API token field is pre-generated on the Adapty backend. You will need to copy the value of Adapty API token and paste it into the Airbridge Dashboard in the Adapty Authorization Token field.


<Zoom>
  <img src={require('./img/ff422d1-CleanShot_2023-03-01_at_17.11.412x.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

### Set up events and tags

Below the credentials, there are three groups of events you can send to Airbridge from Adapty


<Zoom>
  <img src={require('./img/eb4e3a9-CleanShot_2023-08-22_at_13.58.472x.webp').default}
  style={{
    border: '1px solid #727272', /* border width and color */
    width: '700px', /* image width */
    display: 'block', /* for alignment */
    margin: '0 auto' /* center alignment */
  }}
/>
</Zoom>

Simply turn on the ones you need.  

## SDK configuration

For the integration, you should pass `airbridge_device_id` to profile builder and call `setIntegrationIdentifier` as it is shown in the example below: 

<Tabs groupId="current-os" queryString>
<TabItem value="swift" label="iOS (Swift)" default>
```swift showLineNumbers
import AirBridge

do {
    try await Adapty.setIntegrationIdentifier(
        key: "airbridge_device_id", 
        value: AirBridge.deviceUUID()
    )
} catch {
    // handle the error
}
```
</TabItem>
<TabItem value="kotlin" label="Android (Kotlin)" default>
```kotlin showLineNumbers
Airbridge.getDeviceInfo().getUUID(object: AirbridgeCallback.SimpleCallback<String>() {
    override fun onSuccess(result: String) {
        Adapty.setIntegrationIdentifier("airbridge_device_id", result) { error ->
            if (error != null) {
                // handle the error
            }
        }
    }
    override fun onFailure(throwable: Throwable) {
    }
})
```
</TabItem>
<TabItem value="flutter" label="Flutter (Dart)" default>
```javascript showLineNumbers
import 'package:airbridge_flutter_sdk/airbridge_flutter_sdk.dart';

final deviceUUID = await Airbridge.state.deviceUUID;

try {
    await Adapty().setIntegrationIdentifier(
        key: "airbridge_device_id", 
        value: deviceUUID,
    );
} on AdaptyError catch (adaptyError) {
    // handle the error
} catch (e) {
    // handle the error
}
```
</TabItem>
<TabItem value="rn" label="React Native (TS)" default>
```typescript showLineNumbers
import Airbridge from 'airbridge-react-native-sdk';
import { adapty } from 'react-native-adapty';

try {
  const deviceId = await Airbridge.state.deviceUUID();

  await adapty.setIntegrationIdentifier("airbridge_device_id", deviceId);
} catch (error) {
  // handle `AdaptyError`
}
```
</TabItem>
</Tabs>

Read more about airbridgeDeviceId in [Airbridge documentation.](https://developers.airbridge.io/v1.1-en/docs/airbridge-device-id)


## SDK configuration

Airbridge does not send real-time attribution data to Adapty. As such, there's no need to request attribution data from Airbridge in your application code. 

It may take Adapty up to 24 hours to receive Airbridge attribution data following a subscription event. Adapty will immediately display it on the dashboard.

## Event structure

Adapty sends selected events to Airbridge as configured in the **Events names** section on the [**Airbridge Integration page**](https://app.adapty.io/integrations/airbridge). Each event is structured like this:

```json
{
  "user": {
    "externalUserID": "user_12345",
    "externalUserEmail": "user@example.com",
    "attributes": {
      "is_premium": true
    }
  },
  "device": {
    "deviceUUID": "550e8400-e29b-41d4-a716-446655440000",
    "deviceModel": "iPhone 14 Pro",
    "osName": "iOS",
    "osVersion": "17.0.1",
    "locale": "en-US",
    "timezone": "America/New_York",
    "ifa": "00000000-0000-0000-0000-000000000000",
    "ifv": "00000000-0000-0000-0000-000000000000"
  },
  "app": {
    "packageName": "com.example.app",
    "version": "1.2.3"
  },
  "eventUUID": "d4f6f1f4-96fb-4a31-bafd-599fef77be90",
  "eventTimestamp": 1709294400000,
  "eventData": {
    "goal": {
      "category": "airbridge.subscribe",
      "customAttributes": {
        "isTrialConverted": true
      },
      "semanticAttributes": {
        "transactionID": "GPA.3383-4699-1373-07113",
        "totalValue": 9.99,
        "currency": "USD",
        "period": "P1M",
        "isRenewal": true,
        "renewalCount": 2,
        "products": [
          {
            "productID": "yearly.premium.6999",
            "name": "yearly.premium.6999",
            "position": 1
          }
        ]
      }
    }
  }
}
```

Where:

| Parameter                                    | Type    | Description                                                    |
|:---------------------------------------------|:--------|:---------------------------------------------------------------|
| `user`                                       | Object  | User information.                                              |
| `user.externalUserID`                        | String  | The user's Customer User ID.                                   |
| `user.externalUserEmail`                     | String  | The user's email address (if available).                       |
| `user.attributes`                            | Object  | Custom user attributes.                                        |
| `device`                                     | Object  | Device information.                                            |
| `device.deviceUUID`                          | String  | The Airbridge Device UUID.                                     |
| `device.deviceModel`                         | String  | Device model (e.g., "iPhone 14 Pro").                          |
| `device.osName`                              | String  | OS name (e.g., "iOS", "Android").                              |
| `device.osVersion`                           | String  | OS version.                                                    |
| `device.ifa`                                 | String  | **iOS only**. ID for Advertisers.                              |
| `device.ifv`                                 | String  | **iOS only**. ID for Vendors.                                  |
| `device.gaid`                                | String  | **Android only**. Google Advertising ID.                       |
| `app`                                        | Object  | App information.                                               |
| `app.packageName`                            | String  | The application's package name / bundle ID.                    |
| `app.version`                                | String  | The application's version.                                     |
| `eventUUID`                                  | String  | Unique ID for the event in Adapty.                             |
| `eventTimestamp`                             | Long    | Timestamp of the event in milliseconds.                        |
| `eventData`                                  | Object  | Event details.                                                 |
| `eventData.goal.category`                    | String  | The Airbridge event category (mapped from Adapty event).       |
| `eventData.goal.semanticAttributes`          | Object  | Standard event attributes.                                     |
| `...semanticAttributes.transactionID`        | String  | Store Transaction ID.                                          |
| `...semanticAttributes.totalValue`           | Float   | Revenue amount.                                                |
| `...semanticAttributes.currency`             | String  | Currency code (e.g., "USD").                                   |
| `...semanticAttributes.period`               | String  | Subscription period in ISO 8601 duration format (e.g., "P1M"). |
| `...semanticAttributes.isRenewal`            | Boolean | `true` if this is a renewal transaction.                       |
| `...semanticAttributes.renewalCount`         | Integer | Number of successful renewals.                                 |
| `...semanticAttributes.products`             | Array   | List of products involved in the event.                        |
| `...semanticAttributes.products[].productID` | String  | The Product ID from the store (e.g., "yearly.premium.6999").   |
| `...semanticAttributes.products[].name`      | String  | Same as `productID`.                                           |
| `...semanticAttributes.products[].position`  | Integer | The position of the product in the list (always 1).            |